--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>My Recent Projects:</p>
 
 <ul>
-<li><a href="scott0707.github.io/css-brush-up">CSS Brush Up</a></li>
+<li><a href="http://scott0707.github.io/css-brush-up">CSS Brush Up</a></li>
 </ul>
         </article>
       </div>
@@ -61,6 +61,6 @@
     <p class="name"></p>
   </div>
 
-  
+
 </body>
 </html>
