--- a/index.html
+++ b/index.html
@@ -22,32 +22,35 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Scott0707.github.com</h1>
+      <h1 class="title">scottrkehr.github.com</h1>
     </header>
     <div id="container">
       <p class="tagline"></p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/scott0707" class="code">View Scott0707.github.com on GitHub</a>
+          <a href="https://github.com/scottrkehr" class="code">View scottrkehr.github.com on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
           <p>Welcome!</p>
 
-<p>My Recent Projects:</p>
+          <p>My Recent Projects:</p>
 
-<ul>
-<li><a href="css-brush-up">CSS Brush Up</a></li>
-</ul>
+          <ul>
+          <li><a href="css-brush-up">CSS Brush Up</a> - CSS review (Work in progress)</li>
+          <li><a href="stylus-structure">Stylus Structure</a> - Stylus review (Work in progress)</li>
+          <li><a href="rem-to-px">rem-to-px</a>Stylus functions and mixins for creating pixel fallback for rems</li>
+          </ul>
+
         </article>
       </div>
     </div>
     <footer>
       <div class="owner">
 
-      <p><a href="https://github.com/scott0707" class="avatar"><img src="https://secure.gravatar.com/avatar/9a3000e9c41adbd7ccdb388946211da4?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a>View <a href="https://github.com/scott0707">scott0707</a> on <a href="https://www.github.com">GitHub</a></p>
+      <p><a href="https://github.com/scottrkehr" class="avatar"><img src="https://secure.gravatar.com/avatar/9a3000e9c41adbd7ccdb388946211da4?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a>View <a href="https://github.com/scottrkehr">scott0707</a> on <a href="https://www.github.com">GitHub</a></p>
 
       </div>
       <div class="creds">
@@ -57,7 +60,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/scott0707/scott0707.github.com/tarball/master" class="tar">tar</a><a href="https://github.com/scott0707/scott0707.github.com/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/scottrkehr/scottrkehr.github.com/tarball/master" class="tar">tar</a><a href="https://github.com/scottrkehr/scottrkehr.github.com/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
