--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">scottrkehr.github.com</h1>
+      <h1 class="title">ScottRKehr.github.com</h1>
     </header>
     <div id="container">
       <p class="tagline"></p>
