fixed rem-to-px link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <ul>
           <li><a href="css-brush-up">CSS Brush Up</a> - CSS review (Work in progress)</li>
           <li><a href="stylus-structure">Stylus Structure</a> - Stylus review (Work in progress)</li>
-          <li><a href="rem-to-px">rem-to-px</a> - Stylus functions and mixins for creating pixel fallback for rems</li>
+          <li><a href="http://github.com/scottrkehr/rem-to-px">rem-to-px</a> - Stylus functions and mixins for creating pixel fallback for rems</li>
           </ul>
 
         </article>
